Fixes & cleanups.